@@ -1,1 +1,1 @@
-../icon.png
+../5.4/icon/icon.png
